WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215903
AudioParam does not need to store its values as double
https://bugs.webkit.org/show_bug.cgi?id=215903
Summary
AudioParam does not need to store its values as double
Chris Dumez
Reported
2020-08-27 15:36:17 PDT
AudioParam does not need to store its values as double. float precision is sufficient for WebAudio values and we end up casting these values to float anyway.
Attachments
Patch
(8.30 KB, patch)
2020-08-27 15:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(8.58 KB, patch)
2020-08-27 16:39 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(8.58 KB, patch)
2020-08-27 16:40 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-08-27 15:37:57 PDT
Created
attachment 407428
[details]
Patch
Darin Adler
Comment 2
2020-08-27 15:59:11 PDT
Comment on
attachment 407428
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=407428&action=review
> Source/WebCore/Modules/webaudio/AudioParam.h:85 > + unsigned units() const { return 0; }
Maybe change to a static member function for now since it just returns a constant; eventually delete it.
Chris Dumez
Comment 3
2020-08-27 16:39:17 PDT
Created
attachment 407434
[details]
Patch
Chris Dumez
Comment 4
2020-08-27 16:40:38 PDT
Created
attachment 407435
[details]
Patch
Chris Dumez
Comment 5
2020-08-27 16:48:37 PDT
Comment on
attachment 407435
[details]
Patch Clearing flags on attachment: 407435 Committed
r266263
: <
https://trac.webkit.org/changeset/266263
>
Chris Dumez
Comment 6
2020-08-27 16:48:39 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2020-08-27 16:49:24 PDT
<
rdar://problem/67905259
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug