AudioParam does not need to store its values as double https://bugs.webkit.org/show_bug.cgi?id=215903

Reviewed by Darin Adler.

AudioParam does not need to store its values as double. float precision is sufficient for
Web Audio values and we end up casting these values to float anyway.

* Modules/webaudio/AudioParam.cpp:
(WebCore::AudioParam::AudioParam):
(WebCore::AudioParam::value):
(WebCore::AudioParam::smoothedValue):
(WebCore::AudioParam::smooth):
(WebCore::AudioParam::calculateFinalValues):
(WebCore::AudioParam::calculateTimelineValues):
* Modules/webaudio/AudioParam.h:

Canonical link: https://commits.webkit.org/228713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266263 268f45cc-cd09-0410-ab3c-d52691b4dbfc