Source/WebCore/Modules/webaudio/AudioParam.h
@@ -56,9 +56,9 @@ public:
     static const double DefaultSmoothingConstant;
     static const double SnapThreshold;
 
-    static Ref<AudioParam> create(BaseAudioContext& context, const String& name, double defaultValue, double minValue, double maxValue, AutomationRate automationRate, AutomationRateMode automationRateMode = AutomationRateMode::Variable, unsigned units = 0)
+    static Ref<AudioParam> create(BaseAudioContext& context, const String& name, float defaultValue, float minValue, float maxValue, AutomationRate automationRate, AutomationRateMode automationRateMode = AutomationRateMode::Variable)
     {
-        return adoptRef(*new AudioParam(context, name, defaultValue, minValue, maxValue, automationRate, automationRateMode, units));
+        return adoptRef(*new AudioParam(context, name, defaultValue, minValue, maxValue, automationRate, automationRateMode));
     }
 
     // AudioSummingJunction
@@ -78,10 +78,12 @@ public:
 
     String name() const { return m_name; }
 
-    float minValue() const { return static_cast<float>(m_minValue); }
-    float maxValue() const { return static_cast<float>(m_maxValue); }
-    float defaultValue() const { return static_cast<float>(m_defaultValue); }
-    unsigned units() const { return m_units; }
+    float minValue() const { return m_minValue; }
+    float maxValue() const { return m_maxValue; }
+    float defaultValue() const { return m_defaultValue; }
+
+    // FIXME: Remove this once it is no longer exposed to the Web.
+    static unsigned units() { return 0; }
 
     // Value smoothing:
 
@@ -94,7 +96,7 @@ public:
     bool smooth();
 
     void resetSmoothedValue() { m_smoothedValue = m_value; }
-    void setSmoothingConstant(double k) { m_smoothingConstant = k; }
+    void setSmoothingConstant(float k) { m_smoothingConstant = k; }
 
     // Parameter automation.    
     ExceptionOr<AudioParam&> setValueAtTime(float value, double startTime);
@@ -115,7 +117,7 @@ public:
     void disconnect(AudioNodeOutput*);
 
 protected:
-    AudioParam(BaseAudioContext&, const String&, double defaultValue, double minValue, double maxValue, AutomationRate, AutomationRateMode, unsigned units = 0);
+    AudioParam(BaseAudioContext&, const String&, float defaultValue, float minValue, float maxValue, AutomationRate, AutomationRateMode);
 
 private:
     // sampleAccurate corresponds to a-rate (audio rate) vs. k-rate in the Web Audio specification.
@@ -130,17 +132,16 @@ private:
 #endif
     
     String m_name;
-    double m_value;
-    double m_defaultValue;
-    double m_minValue;
-    double m_maxValue;
+    float m_value;
+    float m_defaultValue;
+    float m_minValue;
+    float m_maxValue;
     AutomationRate m_automationRate;
     AutomationRateMode m_automationRateMode;
-    unsigned m_units;
 
     // Smoothing (de-zippering)
-    double m_smoothedValue;
-    double m_smoothingConstant;
+    float m_smoothedValue;
+    float m_smoothingConstant;
     
     AudioParamTimeline m_timeline;
 
